@@ -21,6 +21,7 @@
 * 2013-09-28 - thorben.betten@open-xchange.com
 
  - Fix for bug 29002: Keep proper emoji characters on reply/forward operation
+ - Fix for bug 28933: Orderly pass empty content to message part
 
 * 2013-09-19 - thorben.betten@open-xchange.com
 
